Add exact search. Fix DB concurrency issue. Add integration tests. Update docs
