# backend/F24/Models/Enums/SearchMode.cs
@@ -1,0 +1,7 @@
+namespace F24.Models.Enums;
+
+public enum SearchMode
+{
+    PrefixAll,
+    ExactCurrent
+}
